<resources>
    <string name="app_name">NavigationView material design</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="collection">Collection</string>
    <string name="order">Order</string>
    <string name="other">Other</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="about_us">About us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>