<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/notifications"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuCollection"
        android:icon="@drawable/order"
        android:title="@string/collection"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuOrder"
        android:icon="@drawable/order"
        android:title="@string/order"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuOther"
        android:icon="@drawable/bike"
        android:title="@string/other"
        app:showAsAction="ifRoom" />

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/menuSetting"
                android:icon="@drawable/settings"
                android:title="@string/settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menuSupport"
                android:icon="@drawable/support_agent"
                android:title="@string/support"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/menuAboutus"
                android:icon="@drawable/info"
                android:title="@string/about_us"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>